# DarkestDungeon2DiscordRichPresence

./: .gitignore  README.md  main.py  pyproject.toml
src/presence/: analyzer.py  const.py  service.py  utils.py
src/rpc/: service.py
src/settings/: settings.py  utils.py
